# resmol

./: Cargo.toml  README.md
examples/: basic_usage.rs  trajectory_analysis.rs
src/: dcd.rs  lib.rs  main.rs
tests/: dcd_reader.rs
tests/data/: traj.dcd
